코드의 전반적인 구조 작성
triain, inference 작성
ChipDataset 클래스 작성
config 파일 작성
preprocess.py에서 overwrite 여부 설정 가능

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,python
 
 Chipdata/
-dataset/
+/dataset/
 gt_images/
 Papers/
 logs/
@@ -10,6 +10,8 @@ runs/
 outputs/
 code_test_results/
 original_data/
+saved_models/
+results/
 .vscode/
 
 ### Python ###
